<resources>
    <string name="thisapp_name">蚂蚁帮邦</string>
    <string name="login">登&#12288;&#12288;&#32;陆</string>
    <string name="login_title">登陆</string>
    <string name="fast_login">快速登陆</string>
    <string name="regist_login">注册并登陆</string>
    <string name="confirmupdate">确认修改</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="webo">微博</string>
    <string name="forgetpw">忘记密码?</string>
    <string name="newuser">注册</string>
    <string name="phonenumber">手机号</string>
    <string name="insrtpw">输入密码</string>
    <string name="code">输入验证码</string>
    <string name="reinsrtpw">再次输入密码</string>
    <string name="sendcode">发送验证码</string>
    <string name="bindingphone">绑定手机号</string>
    <string name="me">我</string>
    <string name="todayincome">今日收益</string>
    <string name="wallet">钱包</string>
    <string name="warehouse">蚂蚁仓库</string>
    <string name="bean">蚂蚁豆</string>
    <string name="parttimejob">兼职/需求包</string>
    <string name="created">已创建</string>
    <string name="signup">报名等待</string>
    <string name="finished">确认完结</string>
    <string name="judge">待评价</string>
    <string name="guess">蚂蚁猜</string>
    <string name="shopping">有情购</string>
    <string name="activity">竞技.活动</string>
    <string name="certify">待认证</string>
    <string name="rank">累计评价</string>
    <string name="center">认证中心</string>
    <string name="idea">意见反馈</string>
    <string name="service">联系客服</string>
    <!--<string name="setting">设置</string>-->
    <string name="userinfo">个人中心</string>
    <string name="head">头像</string>
    <!--<string name="nickname">昵称</string>-->
    <string name="metwocode">我的二维码</string>
    <string name="reseiveadress">收货地址</string>
    <string name="sex">性别</string>
    <string name="adress">地址</string>
    <string name="income">今日收益</string>
    <string name="bundlebankcard">关联银行卡</string>
    <string name="balance">账户余额</string>
    <string name="mebalance">我的余额</string>
    <string name="topup">充值</string>
    <string name="withdrawcash">提现</string>
    <string name="bundleingzhifubao">支付宝绑定</string>
    <string name="bothday">生日</string>
    <string name="logistics">查看物流</string>
    <string name="goodsput">商品提出</string>
    <string name="goodssell">商品卖出</string>
    <string name="sellbean">卖出</string>
    <string name="beantopup">蚂蚁豆充值</string>
    <string name="beansell">蚂蚁豆卖出</string>
    <string name="profit">收益</string>
    <string name="now">可卖出的蚂蚁豆</string>s
    <string name="nowsell">卖出</string>
    <string name="surplus">0/150</string>
    <string name="confirm">确认</string>
    <string name="message">消息通知</string>
    <string name="blacklist">黑名单</string>
    <string name="clearceche">清除缓存</string>
    <string name="checkupdate">检查更新</string>
    <string name="zan">给蚂蚁点个赞</string>
    <string name="AccountSecurity">账号安全</string>
    <string name="aboutme">关于我们</string>
    <string name="notifymsg">接收新消息通知</string>
    <string name="motifyshow">通知显示详情</string>
    <string name="sound">声音</string>
    <!--<string name="shake">震动</string>-->
    <string name="Relieve">解除</string>
    <!---环信错误码对应的信息-->
    <string name="CHATROOM_ALREADY_JOINED">已经在此聊天室里</string>
    <string name="CHATROOM_INVALID_ID">聊天室id不正确</string>
    <string name="CHATROOM_MEMBERS_FULL">聊天室成员已满</string>
    <string name="CHATROOM_NOT_EXIST">聊天室不存在</string>
    <string name="CHATROOM_NOT_JOINED">尚未加入此聊天室</string>
    <string name="CHATROOM_PERMISSION_DENIED">聊天室权限不够</string>
    <string name="EM_NO_ERROR">无错误</string>
    <string name="FILE_DOWNLOAD_FAILED">文件下载失败</string>
    <string name="FILE_INVALID">文件不合法</string>
    <string name="FILE_NOT_FOUND">文件不存在</string>
    <string name="FILE_UPLOAD_FAILED">文件上传失败</string>
    <string name="GENERAL_ERROR">一般错误，未细分的错误一般通过此errorcode抛出来</string>
    <string name="GROUP_ALREADY_JOINED">已经加入的群组</string>
    <string name="GROUP_INVALID_ID">群id不正确</string>
    <string name="GROUP_MEMBERS_FULL">群成员已满</string>
    <string name="GROUP_NOT_EXIST">群组不存在</string>
    <string name="GROUP_NOT_JOINED">尚未加入此群组</string>
    <string name="GROUP_PERMISSION_DENIED">群组权限不够</string>
    <string name="INVALID_APP_KEY">appkey不正确</string>
    <string name="INVALID_PASSWORD">密码不正确</string>
    <string name="INVALID_URL">url不正确</string>
    <string name="INVALID_USER_NAME">用户id不正确</string>
    <string name="MESSAGE_ENCRYPTION_ERROR">消息加解密错误</string>
    <string name="MESSAGE_INCLUDE_ILLEGAL_CONTENT">消息内容包含非法或敏感词</string>
    <string name="MESSAGE_INVALID">消息不合法</string>
    <string name="MESSAGE_SEND_TRAFFIC_LIMIT">消息发送过快，触发限流</string>
    <string name="NETWORK_ERROR">网络异常</string>
    <string name="SERVER_BUSY">服务器繁忙</string>
    <string name="SERVER_NOT_REACHABLE">无法访问到服务器</string>
    <string name="SERVER_TIMEOUT">等待服务器响应超时</string>
    <string name="SERVER_UNKNOWN_ERROR">未知的server异常</string>
    <string name="USER_ALREADY_EXIST">用户已经存在</string>
    <string name="USER_ALREADY_LOGIN">用户已登录</string>
    <string name="USER_AUTHENTICATION_FAILED">用户id或密码错误</string>
    <string name="USER_BINDDEVICETOKEN_FAILED">绑定设备token失败</string>
    <string name="USER_ILLEGAL_ARGUMENT">参数不合法</string>
    <string name="USER_LOGIN_ANOTHER_DEVICE">账户在另外一台设备登录</string>
    <string name="USER_NOT_FOUND">不存在此用户</string>
    <string name="USER_NOT_LOGIN">用户未登录</string>
    <string name="USER_REG_FAILED">注册失败</string>
    <string name="USER_REMOVED">账户被删除</string>
    <string name="USER_UNBIND_DEVICETOKEN_FAILED">解绑设备token失败</string>
    <string name="USER_UPDATEINFO_FAILED">更新用户信息失败</string>
    <string name="USER_FAILED">不知名错误</string>
    <!---环信错误码-->
    <string name="addressbook">通讯录</string>
    <string name="mequn">我的群组</string>
    <string name="brand">我的品牌</string>
    <string name="newfrend">新的朋友</string>

    <string name="xml_custom_send">发送</string>
    <!--<string name="location_recv">[%1$s的位置]</string>-->
    <!--<string name="location_prefix">[我的位置]</string>-->
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <!--<string name="file">[文件]</string>-->
    <string name="voice_prefix">[语音]</string>
    <!--<string name="voice_call">[语音通话]</string>-->
    <!--<string name="video_call">[视频通话]</string>-->
    <string name="dynamic_expression">[动态表情]</string>
    <!--<string name="not_download">未下载:</string>-->
    <!--<string name="text_ack_msg">已读</string>-->
    <!--<string name="text_delivered_msg">送达</string>-->
    <string name="pictures">图片</string>
    <string name="tip">小费</string>
    <string name="videos">地理位置</string>
    <string name="gift">送礼物</string>
    <string name="localtion">地理位置</string>
    <string name="double_rob">双人抢</string>
    <string name="newfrends">新朋友</string>
    <string name="checked_text">我已阅读并接受</string>
    <string name="negotiate">《城市蚂蚁用户协议》</string>


    <!--<string name="prompt">温馨提示：请先选择参与对象后再点击发起类型</string>-->
    <string name="mecreatek">我要发起</string>
    <string name="choose">相关选择</string>

    <string name="xml_custom_record">按住 说话</string>

    <string name="disconnectioned">会话服务器已断开，正在尝试链接...</string>
    <string name="network_disconnectioned">当前网络不可用，请检查网络设置</string>
    <string name="pay_string">支付</string>

    <!-- zxing-->
    <string name="scan_tip">将取景框对准二维码,\n即可自动扫描。</string>
    <string name="removeItem">删除</string>
    <string name="scan_login">二维码扫描</string>
    <string name="add_friends">添加好友</string>
    <string name="qun_start">群发起</string>
    <string name="Brand_Blogging">品牌部落</string>
    <string name="shaoyishao">扫一扫</string>

    <string name="jionin">参与详情</string>
</resources>
