<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="127dp"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/yellow"
        android:orientation="vertical">

        <RelativeLayout android:id="@+id/addfiend" style="@style/addfrend_menu">

            <ImageView
                style="@style/addfrend_menu_icon"
                android:src="@drawable/jiahaoyou" />

            <TextView
                style="@style/addfrend_menu_text"
                android:text="@string/add_friends" />

            <View
                style="@style/addfr_line" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/g_start"
            style="@style/addfrend_menu">

            <ImageView
                style="@style/addfrend_menu_icon"
                android:src="@drawable/jiahaoyou" />

            <TextView
                style="@style/addfrend_menu_text"
                android:text="@string/qun_start" />


            <View
                style="@style/addfr_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pinpaibuluo"
            style="@style/addfrend_menu">

            <ImageView
                style="@style/addfrend_menu_icon"
                android:src="@drawable/jiahaoyou" />

            <TextView
                style="@style/addfrend_menu_text"
                android:text="@string/Brand_Blogging" />

            <View
                style="@style/addfr_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shaoshao"
            style="@style/addfrend_menu">

            <ImageView
                style="@style/addfrend_menu_icon"
                android:src="@drawable/jiahaoyou" />

            <TextView
                style="@style/addfrend_menu_text"
                android:text="@string/shaoyishao" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>