<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="@color/bg"
        android:orientation="vertical">


        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onMessageClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/message" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/drawableright" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onBlacklistClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/blacklist" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/drawableright" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clearceche"
            style="@style/me_guess_re"
            android:layout_marginTop="5dp"
            android:onClick="onClearcCecheClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/clearceche" />

            <TextView
                style="@style/me_guess_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="0.0MB"
                android:textColor="@color/gray"
                android:textSize="@dimen/textsize13" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/checkUpdate"
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onCheckUpdateClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/checkupdate" />

            <TextView
                style="@style/me_guess_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="1.0"
                android:textColor="@color/gray"
                android:textSize="@dimen/textsize13" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onZanClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/zan" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="5dp"
            android:onClick="onAccountSecurityClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/AccountSecurity" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/drawableright" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="5dp"
            android:onClick="onAboutMeClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/aboutme" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/drawableright" />
        </RelativeLayout>


        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="105dp"
            android:onClick="onLogOutClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="退出当前账号"
                android:textColor="#FF5081"
                android:textSize="13dp" />


        </RelativeLayout>

    </LinearLayout>
</LinearLayout>