<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/textView"
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/notifymsg" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/motifyshow" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/sound" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/guess_icon"
                android:text="@string/shake" />
        </RelativeLayout>

        <com.iloomo.widget.MSwitchButton
            android:layout_width="100dp"
            android:layout_height="50dp"></com.iloomo.widget.MSwitchButton>

    </LinearLayout>
</LinearLayout>