<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:onClick="onUserheadChangeClick">

            <TextView
                style="@style/me_guess_text"
                android:text="@string/head" />

            <ImageView
                android:id="@+id/userhead_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/gray"
                android:onClick="onUserheadClick" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onNickNameChangeClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/nickname" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="小明"
                android:textColor="@color/gray"
                android:textSize="@dimen/textsize13" />


        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onMeTwoCodeClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/metwocode" />

            <ImageView
                android:id="@+id/codeImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/gray" />


        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="5dp"
            android:onClick="onReseiveAdressClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/reseiveadress" />

        </RelativeLayout>


        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="5dp"
            android:onClick="onReseiveAdressClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/sex" />


            <ImageView
                android:id="@+id/sex"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onBothdayClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/bothday" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/me_guess_re"
            android:layout_marginTop="1dp"
            android:onClick="onAdressClick">

            <TextView
                style="@style/me_guess_text"
                android:layout_toRightOf="@+id/center_icon"
                android:text="@string/adress" />

            <TextView
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="北京 朝阳"
                android:textColor="@color/gray"
                android:textSize="@dimen/textsize13" />


        </RelativeLayout>
    </LinearLayout>
</LinearLayout>