<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/red">

        <RelativeLayout
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/created_icon"
                style="@style/wallet_icon"
                android:background="@color/gray" />


            <TextView
                android:id="@+id/bean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/created_icon"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                style="@style/wallet_t"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/bean"
                android:text="@string/bean" />


        </RelativeLayout>

    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/topup"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:onClick="onTopUpClick"
        android:background="@drawable/button_normal_l"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/sellbean"
        android:textSize="15dp"
        android:onClick="onSellBeanClick"
        android:textColor="@color/black"
        android:background="@drawable/button_normal_l"
        />
</LinearLayout>