<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mequn_chatlist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/hand_qun"
            style="@style/myfrends_userhand"
            android:layout_marginLeft="10dp"
            android:background="@drawable/txqunzu"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/username_qun"
            style="@style/myfrends_username"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/hand_qun"
            android:text="@string/mequn" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg" />


    <RelativeLayout
        android:id="@+id/mebrand"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/hand_brand"
            style="@style/myfrends_userhand"
            android:layout_marginLeft="10dp"
            android:background="@drawable/txpinpai"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/username_brand"
            style="@style/myfrends_username"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/hand_brand"
            android:text="@string/brand" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg" />

    <RelativeLayout
        android:id="@+id/addNewFrend"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/hand_newfrend"
            style="@style/myfrends_userhand"
            android:layout_marginLeft="10dp"
            android:background="@drawable/jiatongxunlu"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/username"
            style="@style/myfrends_username"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/hand_newfrend"
            android:text="@string/newfrends" />

    </RelativeLayout>

</LinearLayout>