<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4f4f4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:background="@color/yellow"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onBalanceClick"
            android:paddingLeft="18dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">


                <TextView
                    android:id="@+id/balance_t"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/balance"
                    android:textColor="#4a2701"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/balance_t"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="32dp"
                    android:text="0"
                    android:textColor="#4a2701"
                    android:textSize="38dp" />


            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"></View>

        </RelativeLayout>

    </LinearLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/white"
        android:drawableRight="@drawable/drawableright"
        android:drawableLeft="@drawable/wallet_icon"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="onTopUpClick"
        android:text="@string/topup"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/white"
        android:drawableRight="@drawable/drawableright"
        android:drawableLeft="@drawable/wallet_icon"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="onWithdrawcashClick"
        android:text="@string/withdrawcash"
        android:textColor="@color/black"
        android:textSize="15dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white"
        android:drawableRight="@drawable/drawableright"
        android:drawableLeft="@drawable/wallet_icon"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="onBundleClick"
        android:text="@string/bundleingzhifubao"
        android:textColor="@color/black"
        android:textSize="15dp" />

</LinearLayout>